[package]
name = "rapier-crash"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }

bevy_rapier2d = { version = "0.11.0", features = ["render", "parallel"] }

tracing = "0.1"
tracing-subscriber = "0.2.0"
    
image = "0.23.14"

rand = "*"

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.bevy]
opt-level = 3
[profile.dev.package.rapier2d]
opt-level = 3

[profile.dev]
opt-level = 1
